--- a/LletraMovil/Views/SelectTypeUserPage.xaml
+++ b/LletraMovil/Views/SelectTypeUserPage.xaml
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LletraMovil.Views.SelectTypeUserPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LletraMovil.Views.SelectTypeUserPage" 
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <ScrollView>
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="100" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -11,38 +14,20 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>   
 
-                <Image Source="background.png" Grid.Column="0" Grid.Row="0" HorizontalOptions="FillAndExpand" Aspect="AspectFill"/>
+                <Image Source="background.png" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" HorizontalOptions="FillAndExpand" Aspect="AspectFill"/>
 
-                <StackLayout Grid.Column="0"
-                             Grid.Row="1"
-                             Margin="20">
-                    <StackLayout>
-                        <Label Text="Elige tu tipo de usuario"
-                               TextColor="White"
-                               FontSize="Title" />
-                    </StackLayout>
-                    <StackLayout>
-                        <Image Margin="200" Source="icon_operador.png"/>
-                        <Label Text="Usuario"
-                               TextColor="White"
-                               FontSize="Subtitle" />
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding CmdUsuario}" />
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
-                    <StackLayout>
-                        <Image Margin="200" Source="icon_cliente.png"/>
-                        <Label Text="Operador"
-                               TextColor="White"
-                               FontSize="Subtitle" />
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding CmdOperador}" />
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
+                <StackLayout Grid.Row="0" Grid.Column="0">
+                    <Label Text="Elige tu tipo de usuario" FontSize="Title" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" 
+                           VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" TextColor="White"/>
                 </StackLayout>
-
-                <StackLayout>
-
+                <StackLayout Grid.Row="1" Grid.Column="0" Margin="0,0,0,20">
+                    <Image Source="icon_cliente.png" WidthRequest="150"/>
+                    <Label Text="Cliente" FontSize="Subtitle" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" TextColor="White" />
+                </StackLayout>
+                <StackLayout Grid.Row="2" Grid.Column="0" Margin="0,0,0,20">
+                    <Image Source="icon_operador.png" WidthRequest="150" />
+                    <Label Text="Operador" FontSize="Subtitle" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" TextColor="White"   />
+                    
                 </StackLayout>
             </Grid>
         </ScrollView>
