--- a/LletraMovil/Views/LoginPage.xaml
+++ b/LletraMovil/Views/LoginPage.xaml
@@ -22,7 +22,7 @@
 
                 <StackLayout Grid.Row="0" Grid.Column="0" Margin="20,0,0,0">
                     <StackLayout WidthRequest="50" HorizontalOptions="Start">
-                        <ImageButton Source="left_arrow.png" BackgroundColor="Transparent" Margin="10"/>
+                        <ImageButton Source="left_arrow.png" BackgroundColor="Transparent" Margin="10" Command="{Binding CmdRegresar}"/>
                     </StackLayout>
                     <StackLayout HorizontalOptions="FillAndExpand">
                     </StackLayout>
@@ -34,7 +34,7 @@
                 </StackLayout>
                 <StackLayout Grid.Row="2" Grid.Column="0">
                     <Label Text="¿No tienes una cuenta?" FontSize="Subtitle" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" TextColor="White" />
-                    <Button Text="Registrate" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" CornerRadius="20" WidthRequest="200"/>
+                    <Button Text="Registrate" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" CornerRadius="20" WidthRequest="200" Command="{Binding CmdRegistrar}"/>
                 </StackLayout>
                 <StackLayout Grid.Row="3" Grid.Column="0">
                     <Grid HorizontalOptions="FillAndExpand" >
@@ -64,11 +64,12 @@
 
                         <StackLayout Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand">
                             <Button Text="Iniciar sesión" BackgroundColor="Blue" CornerRadius="25" WidthRequest="200" VerticalOptions="Center" 
-                                    HorizontalOptions="Center" TextColor="White"/>
+                                    HorizontalOptions="Center" TextColor="White" Clicked="Button_Clicked"/>
                         </StackLayout>
                     </Grid>
                     <StackLayout Grid.Row="2" Grid.Column="0">
-                        <Button Text="¿Olvidaste tus datos?" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"  BackgroundColor="Transparent" Margin="15" TextColor="White" FontSize="Subtitle"/>
+                        <Button Text="¿Olvidaste tus datos?" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"  BackgroundColor="Transparent" Margin="15" TextColor="White" 
+                                FontSize="Subtitle" Command="{Binding CmdRecuperar}"/>
                     </StackLayout>
                 </StackLayout>
                 
