--- a/LletraMovil/Views/EndRegisterPage.xaml
+++ b/LletraMovil/Views/EndRegisterPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="LletraMovil.Views.RegisterPage">
+             x:Class="LletraMovil.Views.EndRegisterPage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
