--- a/LletraMovil/Views/LoginPage.xaml
+++ b/LletraMovil/Views/LoginPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:abstractions="clr-namespace:LeoJHarris.FormsPlugin.Abstractions;assembly=LeoJHarris.FormsPlugin.Abstractions"
-             x:Class="LletraMovil.Views.LoginPage">
+             x:Class="LletraMovil.Views.LoginPage" NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <ScrollView>
             <Grid>
