--- a/LletraMovil/Views/LoginPage.xaml
+++ b/LletraMovil/Views/LoginPage.xaml
@@ -63,7 +63,7 @@
                         </StackLayout>
 
                         <StackLayout Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand">
-                            <Button Text="Iniciar sesión" BackgroundColor="Blue" CornerRadius="25" WidthRequest="200" VerticalOptions="Center" 
+                            <Button Text="Iniciar sesión" BackgroundColor="{DynamicResource PrimaryBlue}" CornerRadius="25" WidthRequest="200" VerticalOptions="Center" 
                                     HorizontalOptions="Center" TextColor="White" Clicked="Button_Clicked"/>
                         </StackLayout>
                     </Grid>
