--- a/LletraMovil/Views/Customers/RegisterPage.xaml
+++ b/LletraMovil/Views/Customers/RegisterPage.xaml
@@ -66,7 +66,8 @@
                         </StackLayout>
                     </StackLayout>
                     <StackLayout HorizontalOptions="FillAndExpand">
-                        <Button Text="Registrarme" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" CornerRadius="20" WidthRequest="200" Margin="20" BackgroundColor="Blue" 
+                        <Button Text="Registrarme" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" CornerRadius="20" WidthRequest="200" 
+                                Margin="20" BackgroundColor="{DynamicResource PrimaryBlue}" 
                                 TextColor="White" Command="{Binding CmdRegistrar}"/>
                     </StackLayout>
                     
