--- a/LletraMovil/Views/Operators/RegisterActivitePage.xaml
+++ b/LletraMovil/Views/Operators/RegisterActivitePage.xaml
@@ -3,13 +3,84 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:abstractions="clr-namespace:LeoJHarris.FormsPlugin.Abstractions;assembly=LeoJHarris.FormsPlugin.Abstractions"
              mc:Ignorable="d"
-             x:Class="LletraMovil.Views.Operators.RegisterActivitePage">
+             x:Class="LletraMovil.Views.Operators.RegisterActivitePage"  NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <Grid>
+                <Grid.RowDefinitions>
+
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Source="background.png" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" HorizontalOptions="FillAndExpand" Aspect="AspectFill"/>
+
+                <StackLayout Grid.Row="0" Grid.Column="0" Margin="20,0,0,0">
+                    <StackLayout WidthRequest="50" HorizontalOptions="Start">
+                        <ImageButton Source="left_arrow.png" BackgroundColor="Transparent" Margin="10" Command="{Binding CmdRegresar}"/>
+                    </StackLayout>
+                    <StackLayout HorizontalOptions="FillAndExpand">
+                    </StackLayout>
+                    <StackLayout WidthRequest="50" HorizontalOptions="End">
+                    </StackLayout>
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="0">
+                    <Label Text="Elige tu tipo de actividad" FontSize="Title" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" 
+                               TextColor="White" Margin="0,20,0,0"  />
+                </StackLayout>
+
+                <StackLayout Grid.Row="2" Grid.Column="0" Orientation="Vertical">
+                    <Frame BackgroundColor="White" Margin="20"  CornerRadius="25" VerticalOptions="FillAndExpand">
+                        <StackLayout Orientation="Vertical" Margin="0,0,0,20">
+                            <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" HeightRequest="80">
+                                <StackLayout HorizontalOptions="Start" WidthRequest="50" VerticalOptions="FillAndExpand">
+                                    <Switch IsToggled="False" OnColor="Gray" VerticalOptions="CenterAndExpand"/>    
+                                </StackLayout>
+                                <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Label Text="Persona fisica" FontSize="Subtitle" HorizontalOptions="FillAndExpand" 
+                                           TextColor="Gray" VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </StackLayout>
+
+                            <BoxView HorizontalOptions="FillAndExpand" HeightRequest="2" Color="Gray"/>
+
+                            <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" HeightRequest="80">
+                                <StackLayout HorizontalOptions="Start" WidthRequest="50" VerticalOptions="FillAndExpand">
+                                    <Switch IsToggled="False" OnColor="Gray" VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                                <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Label Text="Persona moral" FontSize="Subtitle" HorizontalOptions="FillAndExpand" 
+                                           TextColor="Gray" VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </StackLayout>
+                        </StackLayout>
+                    </Frame>
+
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout HorizontalOptions="Start" WidthRequest="50">
+                            <Switch IsToggled="False" OnColor="Gray"/>
+                        </StackLayout>
+                        <StackLayout HorizontalOptions="FillAndExpand">
+                            <Label Text="Acepto terminos y condiciones" FontSize="Subtitle" HorizontalOptions="FillAndExpand" TextColor="White" />
+                        </StackLayout>
+                    </StackLayout>
+
+                    <StackLayout HorizontalOptions="FillAndExpand">
+                        <Button Text="Continuar" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" CornerRadius="20" WidthRequest="200" 
+                                Margin="20" BackgroundColor="LightBlue" 
+                                TextColor="White" Command="{Binding CmdRegistrar}"/>
+                    </StackLayout>
+
+                </StackLayout>
+            </Grid>
+        </ScrollView>       
     </ContentPage.Content>
 </ContentPage>
